# parting

./: Cargo.toml  LICENSE  README.md
assets/: parting.desktop
src/: app.rs  i18n.rs  main.rs  snap.rs  x11_helper.rs  xrandr.rs
